<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/prefer_tittle">
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/prefer_language">

        <CheckBoxPreference
            android:key="nor_lang"
            android:title="@string/nor_lang"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="ger_lang"
            android:title="@string/ger_lang"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefer_antall">

        <CheckBoxPreference
            android:key="prefer_spill5"
            android:title="@string/prefer_spill5"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="prefer_spill10"
            android:title="@string/prefer_spill10"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="prefer_spill15"
            android:title="@string/prefer_spill15"
            android:defaultValue="true" />


    </PreferenceCategory>
</PreferenceScreen>