<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_1"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="692dp"
            android:layout_marginTop="32dp"
            android:columnCount="1"
            android:rowCount="4">


            <Button
                android:id="@+id/StartSpill"
                android:layout_width="154dp"
                android:layout_height="165dp"
                android:layout_row="0"
                android:layout_column="0"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/start_main" />

            <Button
                android:id="@+id/OmSpill"
                android:layout_width="154dp"
                android:layout_height="165dp"
                android:layout_row="1"
                android:layout_column="0"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/om_main" />


            <Button
                android:id="@+id/preferanser"
                android:layout_width="154dp"
                android:layout_height="165dp"
                android:layout_row="2"
                android:layout_column="0"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/prefer_main" />


            <Button
                android:id="@+id/Avslutt"
                android:layout_width="154dp"
                android:layout_height="165dp"
                android:layout_row="3"
                android:layout_column="0"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/avslutt_main" />


        </GridLayout>

        <EditText
            android:id="@+id/tekst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>