<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/omspill_tekst"
            android:textColor="#191970"
            android:textSize="45sp"
            android:textStyle="bold" />

        <GridLayout
            android:id="@+id/omspill_grid1"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:background="@drawable/img_3"
            android:columnCount="1"
            android:rowCount="1">

            <TextView
                android:layout_width="347dp"
                android:layout_height="377dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center"
                android:text="@string/omspill_beskriv"
                android:textColor="#8B0000"
                android:textSize="30sp"
                android:textStyle="bold" />


        </GridLayout>

        <Button
            android:id="@+id/omspill_knapp1"
            android:text="@string/omspill_knapp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="#C71585"
            android:textColor="#FFF0F5"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>